# pa4-rossirpaulo

./: ishmael.segmented.txt  segment.cabal
app/: Prepare.hs  Segment.hs
