cabal-version:      3.0
name:               segment
version:            0.1.0.0
license:            NONE
build-type:         Simple

common warnings
    ghc-options: -Wall

executable prepare
    import:           warnings
    main-is:          Prepare.hs
    hs-source-dirs:   app
    build-depends:    base ^>=4.18.3.0,
                      containers,
                      split
    default-language: Haskell2010

executable segment
    import:           warnings
    main-is:          Segment.hs
    hs-source-dirs:   app
    build-depends:    base ^>=4.18.3.0,
                      array,
                      containers
    default-language: Haskell2010
